--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
   "autoload": {
     "psr-4": {
       "PetrKnap\\XzUtils\\": "src"
-    }
+    },
+    "files": [
+      "src/ext-xz.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
@@ -32,7 +35,9 @@
   "license": "LGPL-3.0-or-later",
   "name": "petrknap/xz-utils",
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.1",
+    "petrknap/shorts": "^3.0",
+    "symfony/process": "^6.4"
   },
   "require-dev": {
     "nunomaduro/phpinsights": "^2.11",
