--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   "require": {
     "php": ">=8.1",
     "petrknap/shorts": "^3.0",
-    "symfony/process": "^6.4"
+    "symfony/process": "^4.0|^5.0|^6.0|^7.0"
   },
   "require-dev": {
     "nunomaduro/phpinsights": "^2.11",
