--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
   "name": "petrknap/xz-utils",
   "require": {
     "php": ">=8.1",
-    "petrknap/shorts": "^3.0",
+    "petrknap/shorts": "^2.0|^3.0",
     "symfony/process": "^4.0|^5.0|^6.0|^7.0"
   },
   "require-dev": {
